# slimeEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
assets/: a.lua
assets/Cube/: pudding.edge  pudding.ele  pudding.face
assets/bunny/: bunny.1.edge  bunny.1.ele  bunny.1.face  bunny.1.node  bunny.1.smesh  bunny.mtl  bunny.stl
assets/chessboarddfloor/: chesssboardfloor.mtl
assets/cube/: cube.1.edge  cube.1.ele  cube.1.face  cube.1.node  cube.1.smesh  cube.mtl  cube.stl
assets/floor/: floor.mtl
assets/newCube/: newcube.mtl  pudding.edge  pudding.ele  pudding.face  pudding.nodes
assets/pudding/: cube.edge  cube.ele  cube.face  cube.nodes  cube10.edge  cube10.ele  cube10.face  cube10.nodes  pudding.1.edge  pudding.1.ele  pudding.1.face  pudding.1.node  pudding.1.smesh  pudding.blend  pudding.blend1  pudding.edge  pudding.ele  pudding.face  pudding.mtl  pudding.nodes  pudding.stl  puddinggenele.1.ele  tetrapudding.ele  tetrapudding.mtl  tetrapudding.nodes
assets/sphere/: sphere.1.edge  sphere.1.ele  sphere.1.face  sphere.1.node  sphere.1.smesh  sphere.mtl  sphere.stl
assets/tetrahedron/: tetrahedron.1.edge  tetrahedron.1.ele  tetrahedron.1.face  tetrahedron.1.node  tetrahedron.1.smesh  tetrahedron.mtl  tetrahedron.stl
configuration/: root_directory.h.in
include/: utils.h
include/assimp/: revision.h
include/glad/: glad.h
libs/assimp/: assimp-vc143-mtd.lib
src/: MeshLoader.cpp  SoftBody.cpp  glad.c  main.cpp  shader.h  stb_image.cpp
src/shaders/: invert.frag  invert.vert  move.vert  pos_as_color.frag  pos_as_color.vert  texture.frag  texture.vert  texture2.frag  texture2.vert
src/structs/: Camera.h  Hit.h  Matrix.h  Mesh.h  MeshLoader.h  Model.h  Ray.h  Shader.h  SoftBody.h  Vector3D.h  debugging.h
